# expert_system

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  map.hpp  note  run_test.sh  test
parser/: CMakeLists.txt  ast.hpp  grammar.hpp  parser.cpp  printer.hpp  test_case
src/: CMakeLists.txt  ast.hpp  expert_system.cpp  expert_system.hpp  fact.cpp  fact.hpp  grammar.hpp  main.cpp  map.cpp  options.cpp  options.hpp  parser.cpp  parser.hpp  rule.cpp  rule.hpp  runTest.sh  system.cpp  system.hpp  utils.cpp  utils.hpp
tests/: AND_conclusion  AND_conclusion.sh  AND_condition  AND_condition.bak  AND_condition.sh  AND_condition_conclusion  AND_condition_conclusion.bak  AND_condition_conclusion.sh  IMPLY_condition  IMPLY_condition.bak  IMPLY_condition.sh  NOT_condition  NOT_condition.bak  NOT_condition.sh  OR_condition  OR_condition.bak  OR_condition.sh  PARENTHESES_condition  PARENTHESES_condition.sh  XOR_condition  XOR_condition.bak  XOR_condition.sh  include.sh  note
tests/Advanced Test/: Advanced Test 2  Advanced Test 3
tests/Advanced_Test/: Advanced_Test_1  Advanced_Test_2  Advanced_Test_3
tests/Correction_test/: 00_AND_condition_conclusion_00  00_AND_condition_conclusion_01  01_OR_condition_00  01_OR_condition_01  01_OR_condition_02  01_OR_condition_03  02_XOR_condition_00  02_XOR_condition_01  02_XOR_condition_02  02_XOR_condition_03  03_NOT_condition_00  03_NOT_condition_01  03_NOT_condition_02  03_NOT_condition_03  04_IMPLY_condition_00  04_IMPLY_condition_01  04_IMPLY_condition_02  04_IMPLY_condition_03  05_PARENTHESES_condition_00  IMPLY_condition  (+25 more)
(+11 files in other folders)
